# itools

./: .gitignore  Cargo.toml  NOTES  test_save_file.yaml
src/: config.rs  fileinfo.rs  hasher.rs  lib.rs  machine.rs  main.rs  output.rs  pcache.rs  progress.rs  result.rs  utils.rs  walker.rs
src/neardups/: config.rs  fileinfo.rs  hasher.rs  mod.rs  output.rs  pcache.rs  result.rs  search.rs  spinner_reader.rs  utils.rs  walker.rs
