[package]
name = "itools"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]

[dependencies]
clap = "2.32.0"
console = "0.6.2"
either = "1.5.0"
image = "0.19.0"
indicatif = "0.9.0"
lazy_static = "1.1.0"
subprocess = "0.1.17"
walkdir = "2.2.5"

[dependencies.img_hash]
version = "2.0"
# For interop with 'image':
features = ["rust-image"]
