[package]
name = "itools"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]

[dependencies]
bk-tree = "0.3.0"
clap = "2.32.0"
console = "0.6.2"
either = "1.5.0"
image = "0.19.0"
indicatif = "0.9.0"
lazy_static = "1.1.0"
# This is deprecated, but included by img_hash, so what'cha gonna do.
rustc-serialize = "0.3.24"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
sha2 = "0.8.0"
subprocess = "0.1.17"
walkdir = "2.2.5"

[dependencies.img_hash]
version = "2.0"
# For interop with 'image':
features = ["rust-image"]
